--- a/أسناني/Base.lproj/Main.storyboard
+++ b/أسناني/Base.lproj/Main.storyboard
@@ -734,6 +734,17 @@
                     <view key="view" contentMode="scaleToFill" id="TXV-D2-vwg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" fixedFrame="YES" image="24" translatesAutoresizingMaskIntoConstraints="NO" id="1EP-mr-bXy">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2SQ-KN-Vyf">
+                                <rect key="frame" x="73" y="105" width="272" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="0.35779644691780821" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="9DE-VQ-70P"/>
                     </view>
@@ -741,7 +752,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U0z-o9-PBd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4545" y="-1563"/>
+            <point key="canvasLocation" x="4543.4782608695659" y="-1563.6160714285713"/>
         </scene>
         <!--Patient FileVC-->
         <scene sceneID="C1T-O2-TPe">
@@ -779,7 +790,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RYd-24-yKP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4490" y="-281"/>
+            <point key="canvasLocation" x="4687" y="-281"/>
         </scene>
         <!--Patient HomeVC-->
         <scene sceneID="80u-LP-0ge">
@@ -1009,6 +1020,7 @@
         <image name="2" width="678" height="1428"/>
         <image name="22" width="279" height="285"/>
         <image name="23" width="668" height="1446"/>
+        <image name="24" width="696" height="1510"/>
         <image name="3" width="718" height="1566"/>
         <image name="4" width="584" height="1258"/>
         <image name="5" width="550" height="1190"/>
